test: Basic controller tests with mocked services